fix: minor html and aligning improvements

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,48 +1,84 @@
 .main
     text-align: center
+    padding: 2.62rem 1.875rem
+    background-color: #F7F7F7
+    &__item1
+        background-color: white
+        padding-top: 2.32rem
+        padding-bottom: 1.875rem
+        padding-left: 1.375rem
+        padding-right: 1.375rem
+        margin-bottom: 41px
+        &__image-container
+            margin-bottom: 27px
+            position: relative
+            &__elipse
+                position: absolute
+                transform: translate(110%, -25%)
+            &__image
+                width: 192px
+                height: 109.93px
+                transform: translate(0%)
+        
+        &__text-container
+            text-align: left
+            &__title
+                margin-bottom: 60px
+                font-size: 30px
+                font-weight: 400
+            &__text
+                font-size: 14px
+            &__line
+                display: none
 
-    &__cta
+    &__item2
+        background-color: white
+        padding-top: 0.75rem
+        padding-bottom: 1.875rem
+        padding-left: 1.375rem
+        padding-right: 1.375rem
+        margin-bottom: 41px
+        &__image-container
+            margin-bottom: 27px
+            position: relative
+            &__elipse
+                width: 132px
+                height: 132px
+                position: absolute
+                transform: translate(20%)
+            &__image
+                width: 175px
+                height: 135px
+                transform: translate(15%, 7.5%)
+        &__text-container
+            text-align: left
+            &__title
+                width: 70%
+                margin-bottom: 1.06rem
+                font-size: 30px
+                font-weight: 400
+            &__text
+                font-size: 14px
+            &__line
+                display: none
+
+    &__item3
+        background-color: white
+        text-align: left
+        padding-top: 1.94rem
+        padding-bottom: 1.5rem
+        padding-left: 1.25rem
+        padding-right: 1.25rem
         &__title
-            font-size: 35px
-            margin-bottom: 20px
-        &__text
-            margin-bottom: 28px
-            line-height: 23px
-        &__button
-            border-radius: 40px
-            color: white
-            background-color: #08A6E4
-            border: 0
-            padding: 1.375em 5.75em  
+            width: 87%
+            font-size: 30px
+            font-weight: 400
+            margin-bottom: 1.65rem
+        &__description
+            width: 87%
+    &__trumpet-container
+        background-color: #55DFB4
+        &__image
+            transform: translateY(15%)
 
-    &__image
-        width: 100%
-        margin-bottom: 40px
-
-    &__facts
-        &__title
-            font-size: 1.875em
-            margin-bottom: 1.56em
-        &__item
-            margin-bottom: 1.5em
-            &__svg
-                margin-bottom: 1em
-                &__elipse1
-                    transform: translate(40%, 10%)
-                &__elipse
-                    transform: translate(50%, 10%)
-                    width: 62.71px
-                    height: 62.71px
-                &__person
-                    transform: translate(-15%)
-                    width: 44px
-                    height: 52px
-                &__eye
-                    transform: translate(-20%, -30%)
-                    width: 61px
-                    height: 33px
-                &__catalog
-                    transform: translate(-7.5%, -7.5%)
-            &__number
-                margin-bottom: 1.18em
-                font-weight: 800
+                
