--- a/sass/nav.sass
+++ b/sass/nav.sass
@@ -2,16 +2,19 @@
     width: 100%
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4)
     padding: 1em 1.5em
-    margin-bottom: 100px
+    position: relative
 
 
     &__logo
         display: inline-block
         color: #08A6E4
         font-size: 32px
+        font-family: Raleway
 
     &__menu
-        text-align: right
+        position: absolute
+        right: 1.875rem
+        top: 1.5rem
         color: #08A6E4
 
     &__list   
